<resources>
    <string name="app_name">WSU Campus Map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">WSU Campus Map</string>
    <string name="nav_header_subtitle">Wolaita Sodo University</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Gandaba Campus</string>
    <string name="menu_otona">Otona Campus</string>
    <string name="menu_saved">Saved</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_share">Share</string>
    <string name="menu_check_update">Check Update</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_version">Version 1.0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_search">Search</string>
</resources>