<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_location_city_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_otona"
            android:icon="@drawable/ic_baseline_location_city_24"
            android:title="@string/menu_otona" />
        <item
            android:id="@+id/nav_saved"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/menu_saved" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_perm_device_information_24"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_check_update"
            android:icon="@drawable/ic_baseline_system_update_24"
            android:title="@string/menu_check_update" />
        <item
            android:id="@+id/nav_version"
            android:title="@string/menu_version" />
    </group>
</menu>