<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.puulapp.wsumap.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_otona"
        android:name="com.puulapp.wsumap.ui.otona.OtonaFragment"
        android:label="@string/menu_otona"
        tools:layout="@layout/fragment_otona" />

    <fragment
        android:id="@+id/nav_saved"
        android:name="com.puulapp.wsumap.ui.saved.SavedFragment"
        android:label="@string/menu_saved"
        tools:layout="@layout/fragment_saved" />
    <fragment
        android:id="@+id/nav_setting"
        android:name="com.puulapp.wsumap.ui.setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.puulapp.wsumap.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

</navigation>